initial app shell

--- a/server/views/partials/close-page.handlebars
+++ b/server/views/partials/close-page.handlebars
@@ -1,16 +1,18 @@
 <section class="side-nav js-side-nav">
   <div class="side-nav__content js-side-nav-content">
-    <div class="side-nav__header">
-      <h1 class="side-nav__title">App shell</h1>
-    </div>
+    <div class="side-nav__header"></div>
 
     <div class="side-nav__body">
-      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/">Index</a>
-      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-1">URL 1</a>
-      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-2">URL 2</a>
+      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/">Discover</a>
+      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-1">Search</a>
+      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-2">Buying</a>
+      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-3">Selling</a>
+      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-4">Me</a>
+      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-5">New Listing</a>
+      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-6">Invite Friends</a>
     </div>
 
-    <div class="side-nav__version">Version @VERSION@</div>
+    <div class="side-nav__version">Help</div>
   </div>
 </section>
 
