--- a/src/styles/core/_colors.scss
+++ b/src/styles/core/_colors.scss
@@ -15,10 +15,10 @@
  * limitations under the License.
  */
 
-$primary: #3F51B5;
-$primaryLight: #C5CAE9;
-$primaryDark: #303F9F;
+$primary: #e2393d;
+$primaryLight: #E64246;
+$primaryDark: #ab2629;
 $secondary: #FF4081;
-$secondaryDark: #4527A0;
+$secondaryDark: #ab2629;
 $toast: #404040;
 $background: #FAFAFA;
