--- a/server/views/partials/open-page.handlebars
+++ b/server/views/partials/open-page.handlebars
@@ -24,7 +24,7 @@ limitations under the License.
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta id="theme-color" name="theme-color" content="#4527A0">
+    <meta id="theme-color" name="theme-color" content="#ab2629">
 
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="/images/chrome-touch-icon-192x192.png" sizes="192x192" type="image/png">
@@ -38,5 +38,5 @@ limitations under the License.
         Toggle nav menu
       </button>
 
-      <h1 class="header__title">App Shell</h1>
+      <h1 class="header__title">Discover</h1>
   </header>
