--- a/src/styles/core/_header.scss
+++ b/src/styles/core/_header.scss
@@ -58,12 +58,13 @@
 .header__menu:focus,
 .header__menu:hover {
   opacity: 1;
-  border: 1px solid white;
+  //border: 1px solid white;
 }
 
 .header__title {
+  font-family: 'Verlag-Book';
   font-weight: 400;
-  font-size: 20px;
+  font-size: 18px;
   margin: 0;
   flex: 1;
 }
