--- a/src/styles/core/_side-nav.scss
+++ b/src/styles/core/_side-nav.scss
@@ -15,6 +15,11 @@
  * limitations under the License.
  */
 
+@font-face {
+    font-family: 'Verlag-Book'; /*a name to be used later*/
+    src: url('/fonts/Verlag-Book.otf') format("opentype");
+}
+
 .side-nav {
   width: 100%;
   height: 100%;
@@ -46,7 +51,7 @@
 }
 
 .side-nav__content {
-  background: #FAFAFA;
+  background: $primary;
   width: 80%;
   max-width: 304px;
   height: 100%;
@@ -70,10 +75,12 @@
 }
 
 .side-nav__header {
-  background: $primary url(/images/side-nav-bg@2x.jpg);
-  background-size: cover;
+  background: url(/images/logo.png);
+  background-size: 128px 44px;
+  background-repeat: no-repeat; 
+  background-position: 16px;
   width: 100%;
-  height: 171px;
+  height: 121px;
   position: relative;
 }
 
@@ -93,28 +100,33 @@
 }
 
 .side-nav__version {
+  height: 58px;
+  width:100%;
   position: absolute;
-  bottom: 16px;
-  left: 16px;
-  font-size: 14px;
-  opacity: 0.54;
+  bottom:0;
+  font-size: 20px;
+  background: #CA3439;
+  vertical-align: middle;
+  color: #FFFFFF;
+  padding-left: 32px;
+  padding-top: 20px;
 }
 
 .side-nav__delete-memos,
 .side-nav__delete-all,
 .side-nav__blog-post,
 .side-nav__file-bug-report {
-  font-family: 'Roboto';
-  font-size: 14px;
+  font-family: 'Verlag-Book';
+  font-size: 20px;
   outline: none;
-  height: 48px;
-  padding-left: 72px;
+  height: 58px;
+  padding-left: 32px;
   width: 100%;
   text-align: left;
   display: block;
   border: none;
   background: url(/images/ic_delete_24px.svg) 16px 12px no-repeat;
-  color: rgba(0,0,0,0.87);
+  color: #FFFFFF;
   cursor: pointer;
 }
 
@@ -123,13 +135,13 @@
 }
 
 .side-nav__blog-post {
-  background-image: url(/images/ic_info_outline_24px.svg);
+  //background-image: url(/images/ic_info_outline_24px.svg);
   line-height: 48px;
   text-decoration: none;
 }
 
 .side-nav__blog-post:focus {
-  background-color: #eee;
+  background-color: #EC898C;
   outline: 0;
 }
 
@@ -143,3 +155,5 @@
   font-weight: bold;
   background-color: rgba(0,0,0,.05);
 }
+
+
