removed menu items. no login.

--- a/server/views/partials/close-page.handlebars
+++ b/server/views/partials/close-page.handlebars
@@ -3,12 +3,10 @@
     <div class="side-nav__header"></div>
 
     <div class="side-nav__body">
-      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/">Discover</a>
+      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/">Sign In</a>
+      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-1">Discover</a>
       <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-1">Search</a>
-      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-2">Buying</a>
-      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-3">Selling</a>
-      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-4">Me</a>
-      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-5">New Listing</a>
+      <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-3">New Listing</a>
       <a role="tab" tabindex="0" class="side-nav__blog-post" href="/url-6">Invite Friends</a>
     </div>
 
